--- a/config/locales/model/ja.yml
+++ b/config/locales/model/ja.yml
@@ -17,16 +17,16 @@ ja:
         current_sign_in_at: 最新ログイン日時
         sign_in_count: ログイン回数
         created_at: 作成日時
-      # 予約(一覧・閲覧・編集)画面
-      reserve:
-        event_id: イベント名
-        name: 予約者名
-        kana: 予約者名(かな)
-        child_name: お子様
-        child_kana: お子様(かな)
-        child_age: 子供の月齢
-        tel: 電話番号
-        email: メールアドレス
-        beginner_flg: 初回参加
-        created_at: 予約日
+#      # 予約(一覧・閲覧・編集)画面
+#      reserve:
+#        event_id: イベント名
+#        name: 予約者名
+#        kana: 予約者名(かな)
+#        child_name: お子様
+#        child_kana: お子様(かな)
+#        child_age: 子供の月齢
+#        tel: 電話番号
+#        email: メールアドレス
+#        beginner_flg: 初回参加
+#        created_at: 予約日
 
